waf_vpc_layer.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: Default VPC_Layer Template for the Project

Parameters:
  ProjectName:
    Type: String
    Description: Project Name
    Default: waf
  PublicKeyMaterial:
    Type: String
    Description: Key Pair - Public Key Material
  AdminIp:
    Type: String
    Description: Admin Public IP Address
    Default: 0.0.0.0/0

Mappings:
  CidrMap:
    ap-northeast-2:
      VpcCidr: 172.16.0.0/16
      PubSn1Cidr: 172.16.1.0/24
      PubSn2Cidr: 172.16.2.0/24
      WebSn3Cidr: 172.16.3.0/24
      WebSn4Cidr: 172.16.4.0/24
      DbSn5Cidr: 172.16.5.0/24
      DbSn6Cidr: 172.16.6.0/24
  AmiMap:
    ap-northeast-2:
      Ami: ami-0c003e98ceffee43e
    openvpn:
      Ami: ami-051d52e500c684ec4

Resources:
# VPC & Internet Gateway
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", VpcCidr]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-vpc"

  Igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-igw"

  IgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref Igw
      VpcId: !Ref Vpc

# Ingress Public Subnet & Route Table
  PubSn1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn1Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-pub-sn1"

  PubSn2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-pub-sn2"

  PubRt12:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-pub-rt12"

  PubRt12Sn1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRt12
      SubnetId: !Ref PubSn1

  PubRt12Sn2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRt12
      SubnetId: !Ref PubSn2

  PubRt12DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: IgwAttachment
    Properties:
      RouteTableId: !Ref PubRt12
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Igw

# Web Private Subnet & Route Table
  WebSn3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", WebSn3Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-web-sn3"

  WebSn4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", WebSn4Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-web-sn4"

  WebRt34:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-web-rt34"

  WebRt34Sn3Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRt34
      SubnetId: !Ref WebSn3

  WebRt34Sn4Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRt34
      SubnetId: !Ref WebSn4

  WebRt34DefaultRouteNatGateway:
    Type: AWS::EC2::Route
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref WebRt34
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

# DB Private Subnet & Route Table
  DbSn5:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", DbSn5Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-db-sn5"

  DbSn6:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", DbSn6Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-db-sn6"

  DbRt56:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-db-rt56"

  DbRt56Sn5Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DbRt56
      SubnetId: !Ref DbSn5

  DbRt56Sn6Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DbRt56
      SubnetId: !Ref DbSn6

# NAT Gateway & EIP
  NatEip:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-nat-eip"

  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: NatEip
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      SubnetId: !Ref PubSn1
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-nat-gw"

# Key Pair
  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub "${ProjectName}-key"
      PublicKeyMaterial: !Ref PublicKeyMaterial

# OpenVPN & Security Group & EIP
  OpenvpnSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "${AWS::Region} OpenVPN Security Group"
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AdminIp
          Description: Allow TCP 22 for Admin SSH access
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: Allow TCP 443 for Admin HTTPS access
        - IpProtocol: tcp
          FromPort: 943
          ToPort: 943
          CidrIp: 0.0.0.0/0
          Description: Allow TCP 943 for Admin web management
        - IpProtocol: tcp
          FromPort: 945
          ToPort: 945
          CidrIp: 0.0.0.0/0
          Description: Allow TCP 945 for internal communication
        - IpProtocol: udp
          FromPort: 1194
          ToPort: 1194
          CidrIp: 0.0.0.0/0
          Description: Allow UDP 1194 for VPN data
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
          Description: Allow ICMP for internal communication test
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-openvpn-sg"

  Openvpn:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [AmiMap, openvpn, Ami]
      InstanceType: t3.micro
      KeyName: !Ref KeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          PrivateIpAddress: !Join
            - "."
            - - !Select [0, !Split [".", !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]]]
              - !Select [1, !Split [".", !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]]]
              - !Select [2, !Split [".", !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]]]
              - "100"
          DeviceIndex: 0
          GroupSet:
            - !Ref OpenvpnSg
          SubnetId: !Ref PubSn2
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-openvpn"

  OpenvpnEip:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-eip-openvpn"

  OpenvpnEipAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt OpenvpnEip.AllocationId
      InstanceId: !Ref Openvpn

# OutPuts
Outputs:
  VpcId:
    Description: The VPC ID
    Value: !Ref Vpc
    Export:
      Name: VpcId
  PubSn1Id:
    Description: The Public Subnet1 ID
    Value: !Ref PubSn1
    Export:
      Name: PubSn1Id
  PubSn2Id:
    Description: The Public Subnet2 ID
    Value: !Ref PubSn2
    Export:
      Name: PubSn2Id
  WebSn3Id:
    Description: The Private Subnet3 ID
    Value: !Ref WebSn3
    Export:
      Name: WebSn3Id
  WebSn4Id:
    Description: The Private Subnet4 ID
    Value: !Ref WebSn4
    Export:
      Name: WebSn4Id
...
